--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -6136,7 +6136,7 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                 </collectionViewFlowLayout>
                                                                 <cells>
-                                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Rider Cell" id="mQf-ET-Z4B">
+                                                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Rider Cell" id="mQf-ET-Z4B" customClass="CaronaeRiderCell">
                                                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -6176,7 +6176,7 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                                                         </mask>
                                                                                     </variation>
                                                                                 </imageView>
-                                                                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Renan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KNe-KX-IxR" userLabel="Rider name">
+                                                                                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Renan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNe-KX-IxR" userLabel="Rider name">
                                                                                     <rect key="frame" x="20" y="20" width="183" height="15"/>
                                                                                     <animations/>
                                                                                     <gestureRecognizers/>
@@ -6223,6 +6223,10 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                                                 <include reference="yT3-xK-ZD2"/>
                                                                             </mask>
                                                                         </variation>
+                                                                        <connections>
+                                                                            <outlet property="nameLabel" destination="KNe-KX-IxR" id="j1r-xT-bLK"/>
+                                                                            <outlet property="photo" destination="VGO-Kz-25w" id="eJW-49-hgo"/>
+                                                                        </connections>
                                                                     </collectionViewCell>
                                                                 </cells>
                                                                 <variation key="default">
