--- a/Caronae/Base.lproj/Main.storyboard
+++ b/Caronae/Base.lproj/Main.storyboard
@@ -531,6 +531,9 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="0.0" y="5" width="360" height="30"/>
+                                                        </variation>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -572,6 +575,9 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="0.0" y="5" width="360" height="30"/>
+                                                        </variation>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -2772,45 +2778,22 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                         <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="95" y="20" width="194" height="18"/>
+                                                        </variation>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Eng. Mecatrônica" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aF0-j7-A42" userLabel="Course">
                                                         <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                         <color key="textColor" red="0.33725491169999999" green="0.33725491169999999" blue="0.34509804840000002" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="95" y="42" width="194" height="18"/>
+                                                        </variation>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JdM-sY-aqY">
-                                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="70" id="aWj-In-NR1">
-                                                                <variation key="widthClass=compact" constant="71"/>
-                                                            </constraint>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                                                        <state key="normal" image="ButtonSignout">
-                                                            <color key="titleColor" red="0.92941176469999998" green="0.18039215689999999" blue="0.050980392159999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </state>
-                                                        <variation key="default">
-                                                            <mask key="constraints">
-                                                                <exclude reference="aWj-In-NR1"/>
-                                                            </mask>
-                                                        </variation>
-                                                        <variation key="widthClass=compact">
-                                                            <mask key="constraints">
-                                                                <include reference="aWj-In-NR1"/>
-                                                            </mask>
-                                                        </variation>
-                                                        <connections>
-                                                            <action selector="didTapLogoutButton:" destination="hXu-7Y-tvn" eventType="touchUpInside" id="pN0-0Z-uiK"/>
-                                                        </connections>
-                                                    </button>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="0R8-uQ-11f" firstAttribute="leading" secondItem="wC6-CD-nF5" secondAttribute="leading" constant="5" id="38O-Kc-etc"/>
-                                                    <constraint firstItem="JdM-sY-aqY" firstAttribute="leading" secondItem="SSR-N1-9qq" secondAttribute="trailing" constant="5" id="3MK-bq-fgA">
-                                                        <variation key="widthClass=compact" constant="0.0"/>
-                                                    </constraint>
                                                     <constraint firstItem="SSR-N1-9qq" firstAttribute="leading" secondItem="0R8-uQ-11f" secondAttribute="trailing" constant="10" id="GFM-wh-4fI">
                                                         <variation key="widthClass=compact" constant="20"/>
                                                     </constraint>
@@ -2826,17 +2809,12 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                     <constraint firstAttribute="bottom" secondItem="0R8-uQ-11f" secondAttribute="bottom" constant="5" id="cnt-qg-8mu"/>
                                                     <constraint firstItem="SSR-N1-9qq" firstAttribute="width" secondItem="aF0-j7-A42" secondAttribute="width" id="d07-7w-5IE"/>
                                                     <constraint firstAttribute="bottom" secondItem="aF0-j7-A42" secondAttribute="bottom" constant="20" id="rky-ec-UnP"/>
-                                                    <constraint firstAttribute="centerY" secondItem="JdM-sY-aqY" secondAttribute="centerY" id="uey-Nd-HQn"/>
-                                                    <constraint firstAttribute="trailing" secondItem="JdM-sY-aqY" secondAttribute="trailing" constant="15" id="yx3-aP-8k0">
-                                                        <variation key="widthClass=compact" constant="0.0"/>
-                                                    </constraint>
                                                 </constraints>
                                                 <variation key="default">
                                                     <mask key="subviews">
                                                         <exclude reference="0R8-uQ-11f"/>
                                                         <exclude reference="SSR-N1-9qq"/>
                                                         <exclude reference="aF0-j7-A42"/>
-                                                        <exclude reference="JdM-sY-aqY"/>
                                                     </mask>
                                                     <mask key="constraints">
                                                         <exclude reference="GVf-5R-kTp"/>
@@ -2846,9 +2824,6 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <exclude reference="Uxr-7K-uNS"/>
                                                         <exclude reference="d07-7w-5IE"/>
                                                         <exclude reference="rky-ec-UnP"/>
-                                                        <exclude reference="3MK-bq-fgA"/>
-                                                        <exclude reference="uey-Nd-HQn"/>
-                                                        <exclude reference="yx3-aP-8k0"/>
                                                         <exclude reference="38O-Kc-etc"/>
                                                         <exclude reference="LY5-Cv-ygi"/>
                                                         <exclude reference="cnt-qg-8mu"/>
@@ -2859,7 +2834,6 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <include reference="0R8-uQ-11f"/>
                                                         <include reference="SSR-N1-9qq"/>
                                                         <include reference="aF0-j7-A42"/>
-                                                        <include reference="JdM-sY-aqY"/>
                                                     </mask>
                                                     <mask key="constraints">
                                                         <include reference="GVf-5R-kTp"/>
@@ -2869,9 +2843,6 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <include reference="Uxr-7K-uNS"/>
                                                         <include reference="d07-7w-5IE"/>
                                                         <include reference="rky-ec-UnP"/>
-                                                        <include reference="3MK-bq-fgA"/>
-                                                        <include reference="uey-Nd-HQn"/>
-                                                        <include reference="yx3-aP-8k0"/>
                                                         <include reference="38O-Kc-etc"/>
                                                         <include reference="LY5-Cv-ygi"/>
                                                         <include reference="cnt-qg-8mu"/>
@@ -3790,6 +3761,9 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                     </textField>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DrivesIcon" translatesAutoresizingMaskIntoConstraints="NO" id="oTl-se-EDm" userLabel="Car Icon">
                                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="0.0" y="71" width="27" height="15"/>
+                                                        </variation>
                                                     </imageView>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DrivesIcon" translatesAutoresizingMaskIntoConstraints="NO" id="aA3-hm-80U" userLabel="Car Icon">
                                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
@@ -3807,7 +3781,8 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                                 <exclude reference="pCi-86-yhh"/>
                                                             </mask>
                                                         </variation>
-                                                        <variation key="widthClass=compact">
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="0.0" y="116" width="27" height="15"/>
                                                             <mask key="constraints">
                                                                 <exclude reference="mrX-gz-9pd"/>
                                                                 <exclude reference="pCi-86-yhh"/>
@@ -3827,7 +3802,8 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                                 <exclude reference="QeR-UZ-a3h"/>
                                                             </mask>
                                                         </variation>
-                                                        <variation key="widthClass=compact">
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="37" y="101" width="333" height="30"/>
                                                             <mask key="constraints">
                                                                 <exclude reference="QeR-UZ-a3h"/>
                                                             </mask>
@@ -3855,7 +3831,8 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                                 <exclude reference="lOH-zk-dNU"/>
                                                             </mask>
                                                         </variation>
-                                                        <variation key="widthClass=compact">
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="0.0" y="161" width="27" height="15"/>
                                                             <mask key="constraints">
                                                                 <exclude reference="f8y-eS-b9V"/>
                                                                 <exclude reference="lOH-zk-dNU"/>
@@ -3877,7 +3854,8 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                                 <exclude reference="tf4-Lm-ctF"/>
                                                             </mask>
                                                         </variation>
-                                                        <variation key="widthClass=compact">
+                                                        <variation key="widthClass=compact" misplaced="YES">
+                                                            <rect key="frame" x="37" y="146" width="333" height="30"/>
                                                             <mask key="constraints">
                                                                 <exclude reference="JsV-ht-chF"/>
                                                                 <exclude reference="tf4-Lm-ctF"/>
@@ -3995,7 +3973,8 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                         <exclude reference="xEf-z0-zZP"/>
                                                     </mask>
                                                 </variation>
-                                                <variation key="widthClass=compact">
+                                                <variation key="widthClass=compact" misplaced="YES">
+                                                    <rect key="frame" x="15" y="578" width="370" height="196"/>
                                                     <mask key="subviews">
                                                         <include reference="q8t-lO-Jqk"/>
                                                         <include reference="ZA1-8O-6ah"/>
@@ -4147,7 +4126,8 @@ Este é o token gerado através da Intranet UFRJ</string>
                                                 <exclude reference="vqv-Ea-ive"/>
                                             </mask>
                                         </variation>
-                                        <variation key="widthClass=compact">
+                                        <variation key="widthClass=compact" misplaced="YES">
+                                            <rect key="frame" x="0.0" y="0.0" width="400" height="789"/>
                                             <mask key="subviews">
                                                 <include reference="wC6-CD-nF5"/>
                                                 <include reference="NpW-3h-cia"/>
